[package]
name = "i_am_mt"
version = "0.1.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

[dependencies]
num = "0.2"
hex = "0.3"
rand = "0.6"
failure = "0.1"
lazy_static = "1"
byteorder = { version = "1", features = ["i128"] }
openssl = { version = "0.10", features = ["vendored"] }

[workspace]
members = [
    "code_gen"
]